Fix broken CSS animation on pageload.

--- a/website/assets/stylesheets/css/main.css
+++ b/website/assets/stylesheets/css/main.css
@@ -2518,9 +2518,6 @@ textarea {
   font-family: "Merriweather Sans", sans-serif;
   font-size: 1.2rem;
   padding: 0.5rem;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  transition: all 0.5s;
 }
 .text-input.large, input.large[type="text"],
 input.large[type="password"],
@@ -2544,6 +2541,20 @@ input.centered[type="email"],
 textarea.centered {
   text-align: center;
 }
+.text-input:focus, input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+textarea:focus, .text-input:hover, input[type="text"]:hover,
+input[type="password"]:hover,
+input[type="email"]:hover,
+textarea:hover, .text-input:active, input[type="text"]:active,
+input[type="password"]:active,
+input[type="email"]:active,
+textarea:active {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
 
 /* Links
 ----------------------------------------------- */
@@ -2556,6 +2567,9 @@ textarea.centered {
 }
 .link:focus, a:focus, .link:hover, a:hover, .link.active, a.active, .link:active, a:active {
   border-bottom: 1px solid #f39c12;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .link:active, a:active {
   opacity: 0.7;
@@ -2593,9 +2607,6 @@ input[type="submit"] {
   font-weight: bold;
   line-height: 1.6em;
   padding: 0.5rem 1rem;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
 }
 a.button:hover,
 button.button:hover,
@@ -2604,12 +2615,18 @@ input[type="submit"]:hover {
   background: #2C3E50;
   color: white !important;
   text-shadow: none !important;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
 }
 a.button:active,
 button.button:active,
 .button:active,
 input[type="submit"]:active {
   opacity: 0.7;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
 }
 a.button.active,
 button.button.active,
